--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Post</h1>
+<h1>Edit Task</h1>
 
 <!-- <form action="/posts/7" method="put"> -->
 <%= form_tag task_path(@task.id), :method => "put" do %>
